<resources>
    <string name="app_name">tour de Balikpapan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_field">Username</string>
    <string name="password_field">Password</string>
    <string name="login">LOGIN</string>
    <string name="register_here">Register Here</string>
    <string name="login_as_guest">Login as Guest</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="choose_image">Choose Image</string>
    <string name="change_image">Change Image</string>
    <string name="register_now">REGISTER NOW</string>
    <string name="login_here">Login Here</string>
    <string name="dummy">dummy</string>
    <string name="posts">7 posts</string>
    <string name="dummy_username">dummy name blabla</string>
    <string name="post_now">POST NOW</string>
    <string name="nature">Nature Tourism</string>
    <string name="shopping_center">Shopping Center</string>
    <string name="culinary">Culinary</string>
    <string name="Fullname">Fullname</string>
    <string name="login_button_guest_activity">Login Here</string>
    <string name="title_wisata">Tourist Name</string>
    <string name="description_wisata">Description</string>
    <string name="shopping">Shopping</string>
    <string name="nature_wisata">Nature</string>
    <string name="culinary_wisata">Culinary</string>
    <string name="description_detail_title">Description</string>
    <string name="location_detail_header">Location</string>
    <string name="post_it">POST IT</string>
    <string name="edit_profile">Edit Profile</string>
</resources>
