<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayoutTambahWisata"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="4dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/titleWisataWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/titleWisata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_wisata"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/descriptionWisataWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/descriptionWisata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_wisata"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>


        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <RadioButton
                android:id="@+id/radioAlam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nature_wisata"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radioBelanja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shopping" />

            <RadioButton
                android:id="@+id/radioKuliner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/culinary_wisata" />

        </RadioGroup>

        <ImageView
            android:id="@+id/ivTambahWisata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:visibility="gone"/>

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/mapTambahWisata"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_marginTop="8dp"

            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>


        <LinearLayout
            android:id="@+id/linearLayoutLatLongTambahWisata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/LatTambahWisata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Latitude : 12039908213"/>

            <TextView
                android:id="@+id/LongTambahWisata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Longitude : 12039908213"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnSelectImageTambahWisata"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_select_image_register"
            android:text="@string/choose_image"
            android:textColor="@color/colorPrimary"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnProcedTambahWisata"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dip"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/register_now"
            android:textColor="@color/white" />



    </LinearLayout>



</android.support.v4.widget.NestedScrollView>