<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayoutRegister"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameRegisterWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/nameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Fullname"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailRegisterWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/emailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameRegisterWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/usernameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordRegisterWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/passwordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/websiteRegisterWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/webRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Website"
                android:inputType="textWebEditText" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSelectImageRegister"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_select_image_register"
            android:text="@string/choose_image"
            android:textColor="@color/colorPrimary"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/linearLayoutSelectImageRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <Button
                android:id="@+id/btnChangeImageRegister"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/button_select_image_register"
                android:text="@string/change_image"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorPrimary"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/displayPictureRegister"
                android:layout_width="96dp"
                android:layout_height="96dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/grey"
                android:layout_centerHorizontal="true"/>


        </LinearLayout>


        <Button
            android:id="@+id/btnPRocedRegister"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dip"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/register_now"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnToLoginActivity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:text="@string/login_here"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />


    </LinearLayout>



</LinearLayout>