<android.support.v4.widget.SwipeRefreshLayout
    android:id="@+id/swipeToRefresh"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:id="@+id/linearLayoutfragment_wisata"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayoutfragment_wisataWisataAlamWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:orientation="vertical">

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer_layout_alam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    shimmer:duration="800">
                    <include layout="@layout/shimmer_fragment_wisata"/>
                </com.facebook.shimmer.ShimmerFrameLayout>

                <TextView
                    android:id="@+id/fragmentWisataNatureHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/nature"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:visibility="gone"/>


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_fragment_wisata_alam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutfragment_wisataWisataBelanjaWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer_layout_belanja"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    shimmer:duration="800">
                    <include layout="@layout/shimmer_fragment_wisata"/>
                </com.facebook.shimmer.ShimmerFrameLayout>

                <TextView
                    android:id="@+id/fragmentWisataShoppingHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/shopping_center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:visibility="gone"/>


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_fragment_wisata_belanja"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayoutfragment_wisataWisataKulinerWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer_layout_kuliner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    shimmer:duration="800">
                    <include layout="@layout/shimmer_fragment_wisata"/>
                </com.facebook.shimmer.ShimmerFrameLayout>

                <TextView
                    android:id="@+id/fragmentWisataCulinaryHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/culinary"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:visibility="gone"/>


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_fragment_wisata_kuliner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.v4.widget.SwipeRefreshLayout>



